<resources>
    <string name="app_name">ShoppingCartChallenge</string>

    <!-- error codes -->
    <string name="connectivity_error">Connectivity Error</string>
    <string name="server_error">Server Error: </string>
    <string name="unknown_error">Unknown Error: </string>

    <!-- main fragment -->
    <plurals name="bedsAvailableFromMainScreen">
        <item quantity="one">Only %d bed available!</item>
        <item quantity="other">%d beds available</item>
    </plurals>
    <string name="welcome">Welcome to book a cool bed!</string>
    <string name="type_dorm_price">%1$s (%2$.2f %3$s/bed)</string>
    <string name="no_dorms">Sorry! There is no more dorms available.\n Come back later!</string>

    <!-- Bottom navigation -->
    <string name="dorms">Dorms</string>
    <string name="checkout">Checkout</string>
    <string name="stats">Stats</string>

    <!-- detail navigation -->
    <plurals name="bedsAvailableFromDetailScreen">
        <item quantity="one">There is %d bed available!\n Do you want to book it?\nIt costs %.2f %s</item>
        <item quantity="other">There are %d beds available.\n The unit costs %.2f %s\nHow many of them do you need?</item>
    </plurals>
    <string name="no_beds">There is no more beds!</string>
    <string name="book">Book</string>

    <!-- checkout fragment -->
    <plurals name="bedsBookedFromCheckoutScreen">
        <item quantity="one">bed from %s costs %.2f %s</item>
        <item quantity="other">beds from %s costs %.2f %s</item>
    </plurals>
    <string name="delete_beds_from_dorm">Delete beds from dorm</string>
    <string name="amount_in">Amount in</string>
    <string name="no_cart_elements">No plans for this weekend? Book a cool bed in another city.</string>
    <string name="add_bed">Add a bed</string>
    <string name="delete_bed">Delete a bed</string>
    <string name="total_amount">Total %1$.2f %2$s</string>
    <string name="retry">Retry</string>
</resources>
