<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/add_bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_bed"
        android:src="@drawable/ic_baseline_add" />

    <TextView
        android:id="@+id/beds_booked"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="1" />

    <ImageView
        android:id="@+id/subtract_bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/delete_bed"
        android:src="@drawable/ic_baseline_subtract" />

    <TextView
        android:id="@+id/cart_element_text"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:text="bed from 6-bed dorm cost 17.56$" />

    <ImageView
        android:id="@+id/delete_cart_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/delete_beds_from_dorm"
        android:src="@drawable/ic_baseline_delete_forever" />

</LinearLayout>
